@@ -11,7 +11,6 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
@@ -103,7 +102,7 @@ public class AdminTeleportCommandTest {
         when(p.getUniqueId()).thenReturn(uuid);
         when(p.hasPermission("admin.tp")).thenReturn(true);
         when(p.hasPermission("admin")).thenReturn(false);
-        
+
         when(user.getUniqueId()).thenReturn(uuid);
         when(user.getPlayer()).thenReturn(p);
         when(user.getName()).thenReturn("tastybento");
@@ -153,7 +152,7 @@ public class AdminTeleportCommandTest {
         when(lm.get(any(), any())).thenAnswer((Answer<String>) invocation -> invocation.getArgument(1, String.class));
         when(plugin.getLocalesManager()).thenReturn(lm);
 
-        when(user.getTranslation(Mockito.anyString(),Mockito.anyString(), Mockito.anyString())).thenAnswer((Answer<String>) invocation -> invocation.getArgument(0, String.class));
+        when(user.getTranslation(anyString(),anyString(), anyString())).thenAnswer((Answer<String>) invocation -> invocation.getArgument(0, String.class));
 
         // Island location
         Location location = mock(Location.class);
@@ -178,7 +177,7 @@ public class AdminTeleportCommandTest {
         // Util
         PowerMockito.mockStatic(Util.class, Mockito.RETURNS_MOCKS);
         when(Util.getUUID(anyString())).thenCallRealMethod();
-        
+
         // Placeholder manager
         when(plugin.getPlaceholdersManager()).thenReturn(phm);
     }
@@ -215,16 +214,16 @@ public class AdminTeleportCommandTest {
     @Test
     public void testExecuteUserStringListOfStringUnknownTarget() {
         AdminTeleportCommand atc = new AdminTeleportCommand(ac,"tp");
-        assertFalse(atc.canExecute(user, "tp", Collections.singletonList("tastybento")));
+        assertFalse(atc.canExecute(user, "tp", List.of("tastybento")));
         verify(user).sendMessage(eq("general.errors.unknown-player"), eq(TextVariables.NAME), eq("tastybento"));
     }
 
     @Test
     public void testExecuteUserStringListOfStringKnownTargetNoIsland() {
-        when(pm.getUUID(eq("tastybento"))).thenReturn(notUUID);
+        when(pm.getUUID("tastybento")).thenReturn(notUUID);
         when(im.hasIsland(any(), any(UUID.class))).thenReturn(false);
         AdminTeleportCommand atc = new AdminTeleportCommand(ac,"tp");
-        assertFalse(atc.canExecute(user, "tp", Collections.singletonList("tastybento")));
+        assertFalse(atc.canExecute(user, "tp", List.of("tastybento")));
         verify(user).sendMessage(eq("general.errors.player-has-no-island"));
     }
 
@@ -233,12 +232,12 @@ public class AdminTeleportCommandTest {
      */
     @Test
     public void testExecuteUserStringListOfStringKnownTargetHasIsland() {
-        when(pm.getUUID(eq("tastybento"))).thenReturn(notUUID);
+        when(pm.getUUID("tastybento")).thenReturn(notUUID);
         when(im.hasIsland(any(), any(UUID.class))).thenReturn(true);
         AdminTeleportCommand atc = new AdminTeleportCommand(ac,"tp");
-        assertTrue(atc.canExecute(user, "tp", Collections.singletonList("tastybento")));
-        assertTrue(atc.execute(user, "tp", Collections.singletonList("tastybento")));
-        verify(user).getTranslation(eq("commands.admin.tp.manual"), eq("[location]"), eq("0 0 0"));
+        assertTrue(atc.canExecute(user, "tp", List.of("tastybento")));
+        assertTrue(atc.execute(user, "tp", List.of("tastybento")));
+        verify(user).getTranslation("commands.admin.tp.manual", "[location]", "0 0 0");
     }
 
     /**
@@ -247,56 +246,56 @@ public class AdminTeleportCommandTest {
     @Test
     public void testExecuteUserStringListOfStringKnownTargetHasIslandSpawnPoint() {
         when(island.getSpawnPoint(any())).thenReturn(spawnPoint);
-        when(pm.getUUID(eq("tastybento"))).thenReturn(notUUID);
+        when(pm.getUUID("tastybento")).thenReturn(notUUID);
         when(im.hasIsland(any(), any(UUID.class))).thenReturn(true);
         AdminTeleportCommand atc = new AdminTeleportCommand(ac,"tp");
-        assertTrue(atc.canExecute(user, "tp", Collections.singletonList("tastybento")));
-        assertTrue(atc.execute(user, "tp", Collections.singletonList("tastybento")));
-        verify(user).getTranslation(eq("commands.admin.tp.manual"), eq("[location]"), eq("0 0 0"));
+        assertTrue(atc.canExecute(user, "tp", List.of("tastybento")));
+        assertTrue(atc.execute(user, "tp", List.of("tastybento")));
+        verify(user).getTranslation("commands.admin.tp.manual", "[location]", "0 0 0");
     }
 
     @Test
     public void testExecuteUserStringListOfStringKnownTargetIsTeamMember() {
-        when(pm.getUUID(eq("tastybento"))).thenReturn(notUUID);
+        when(pm.getUUID("tastybento")).thenReturn(notUUID);
         when(im.hasIsland(any(), any(UUID.class))).thenReturn(false);
         when(im.inTeam(any(), any(UUID.class))).thenReturn(true);
         AdminTeleportCommand atc = new AdminTeleportCommand(ac,"tp");
-        assertTrue(atc.canExecute(user, "tp", Collections.singletonList("tastybento")));
-        assertTrue(atc.execute(user, "tp", Collections.singletonList("tastybento")));
+        assertTrue(atc.canExecute(user, "tp", List.of("tastybento")));
+        assertTrue(atc.execute(user, "tp", List.of("tastybento")));
         verify(iwm, Mockito.never()).getNetherWorld(any());
         verify(iwm, Mockito.never()).getEndWorld(any());
-        verify(user).getTranslation(eq("commands.admin.tp.manual"), eq("[location]"), eq("0 0 0"));
+        verify(user).getTranslation("commands.admin.tp.manual", "[location]", "0 0 0");
     }
 
     @Test
     public void testExecuteUserStringListOfStringKnownTargetHasIslandNether() {
-        when(pm.getUUID(eq("tastybento"))).thenReturn(notUUID);
+        when(pm.getUUID("tastybento")).thenReturn(notUUID);
         when(im.hasIsland(any(), any(UUID.class))).thenReturn(true);
         AdminTeleportCommand atc = new AdminTeleportCommand(ac,"tpnether");
-        assertTrue(atc.canExecute(user, "tpnether", Collections.singletonList("tastybento")));
-        assertTrue(atc.execute(user, "tpnether", Collections.singletonList("tastybento")));
+        assertTrue(atc.canExecute(user, "tpnether", List.of("tastybento")));
+        assertTrue(atc.execute(user, "tpnether", List.of("tastybento")));
         verify(iwm).getNetherWorld(any());
         verify(iwm, Mockito.never()).getEndWorld(any());
-        verify(user).getTranslation(eq("commands.admin.tp.manual"), eq("[location]"), eq("0 0 0"));
+        verify(user).getTranslation("commands.admin.tp.manual", "[location]", "0 0 0");
     }
 
     @Test
     public void testExecuteUserStringListOfStringKnownTargetHasIslandEnd() {
-        when(pm.getUUID(eq("tastybento"))).thenReturn(notUUID);
+        when(pm.getUUID("tastybento")).thenReturn(notUUID);
         when(im.hasIsland(any(), any(UUID.class))).thenReturn(true);
         AdminTeleportCommand atc = new AdminTeleportCommand(ac,"tpend");
-        assertTrue(atc.canExecute(user, "tpend", Collections.singletonList("tastybento")));
-        assertTrue(atc.execute(user, "tpend", Collections.singletonList("tastybento")));
+        assertTrue(atc.canExecute(user, "tpend", List.of("tastybento")));
+        assertTrue(atc.execute(user, "tpend", List.of("tastybento")));
         verify(iwm, Mockito.never()).getNetherWorld(any());
         verify(iwm).getEndWorld(any());
-        verify(user).getTranslation(eq("commands.admin.tp.manual"), eq("[location]"), eq("0 0 0"));
+        verify(user).getTranslation("commands.admin.tp.manual", "[location]", "0 0 0");
     }
 
     @Test
     public void testPermissionsNoRootPermission() {
         when(p.hasPermission("admin.tp")).thenReturn(true);
         when(p.hasPermission("admin")).thenReturn(false);
-        when(pm.getUUID(eq("tastybento"))).thenReturn(notUUID);
+        when(pm.getUUID("tastybento")).thenReturn(notUUID);
         when(im.hasIsland(any(), any(UUID.class))).thenReturn(true);
         AdminTeleportCommand atc = new AdminTeleportCommand(ac,"tpend");
         assertTrue(atc.canExecute(user, "tpend", List.of("tastybento")));
@@ -306,12 +305,12 @@ public class AdminTeleportCommandTest {
         // Should fail
         assertFalse(atc.execute(p, "tpend", list));
     }
-    
+
     @Test
     public void testPermissionsHasRootPermission() {
         when(p.hasPermission("admin.tp")).thenReturn(true);
         when(p.hasPermission("admin")).thenReturn(true);
-        when(pm.getUUID(eq("tastybento"))).thenReturn(notUUID);
+        when(pm.getUUID("tastybento")).thenReturn(notUUID);
         when(im.hasIsland(any(), any(UUID.class))).thenReturn(true);
         AdminTeleportCommand atc = new AdminTeleportCommand(ac,"tpend");
         assertTrue(atc.canExecute(user, "tpend", List.of("tastybento")));
